--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,10 @@
     "license": "BSD",
     "require-dev": {
         "mageekguy/atoum": "dev-master"
+    },
+    "autoload": {
+        "psr-0": {
+            "minimvc": "src/"
+        }
     }
 }
