move language functions into langController

--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,6 @@
         "mageekguy/atoum": "dev-master"
     },
     "autoload": {
-        "psr-0": {
-            "minimvc": "src/"
-        }
+        "classmap": [ "src/" ]
     }
 }
